--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,8 +15,8 @@ dependencies:
     sdk: flutter
   flutter_riverpod: ^1.0.4
   intl: ^0.17.0
-  isar: ^2.5.0
-  isar_flutter_libs: ^2.5.0
+  isar: ^3.0.0-dev.8
+  isar_flutter_libs: ^3.0.0-dev.8
   logger: ^1.1.0
   path: ^1.8.1
   path_provider: ^2.0.11
@@ -26,8 +26,8 @@ dev_dependencies:
     sdk: flutter
 
   flutter_lints: ^2.0.1
-  isar_generator: ^2.5.0
-  build_runner: ^2.1.11
+  isar_generator: ^3.0.0-dev.8
+  build_runner: ^2.2.0
 
 flutter:
   uses-material-design: true
